crates/ruff_python_formatter/tests/snapshots/format@optional_chain.by.snap
---
source: crates/ruff_python_formatter/tests/fixtures.rs
input_file: crates/ruff_python_formatter/resources/test/fixtures/ruff/optional_chain.by
---
## Input
```bython
city = user?.address
name = user?.name ?? "anon"
result = a ?? b ?? c
x = a?.b?.c
```

## Output
```bython
city   = user?.address
name   = user?.name ?? "anon"
result = a ?? b ?? c
x      = a?.b?.c
```
