crates/ruff_python_formatter/tests/snapshots/format@pack_forwarding.by.snap
---
source: crates/ruff_python_formatter/tests/fixtures.rs
input_file: crates/ruff_python_formatter/resources/test/fixtures/ruff/pack_forwarding.by
---
## Input
```bython
def deco[Parameters: (*: *, **: *), R](fn: (**Parameters) -> R) -> (**Parameters) -> R:
    def inner(*args: *Parameters, **kwargs: **Parameters) -> R:
        return fn(*args, **kwargs)

    return inner


class Wrapper[Parameters: (*: *, **: *), out R]:
    def __call__(self, *args: *Parameters, **kwargs: **Parameters) -> R: ...


def concatenated[Parameters: (*: *, **: *)](
    first: int, /, *args: *Parameters, **kwargs: **Parameters
) -> None: ...


def keyword_pack[**Kwargs](**kwargs: **Kwargs) -> None: ...


def variadic_pack[*Ts](*args: *Ts) -> None: ...


def broken[Parameters: (*: *, **: *), Element](
    callback: (**Parameters) -> Element,
    /,
    *args: *Parameters,
    **kwargs: **Parameters,
) -> Element: ...
```

## Output
```bython
def deco[Parameters: (*: *, **: *), R](fn: (**Parameters) -> R) -> (**Parameters) -> R:
    def inner(*args: *Parameters, **kwargs: **Parameters) -> R:
        return fn(*args, **kwargs)

    return inner


class Wrapper[Parameters: (*: *, **: *), out R]:
    def __call__(self, *args: *Parameters, **kwargs: **Parameters) -> R: ...


def concatenated[Parameters: (*: *, **: *)](
    first: int, /, *args: *Parameters, **kwargs: **Parameters
) -> None: ...


def keyword_pack[**Kwargs](**kwargs: **Kwargs) -> None: ...


def variadic_pack[*Ts](*args: *Ts) -> None: ...


def broken[Parameters: (*: *, **: *), Element](
    callback: (**Parameters) -> Element,
    /,
    *args: *Parameters,
    **kwargs: **Parameters,
) -> Element: ...
```
