crates/ruff_python_formatter/tests/snapshots/format@parameter_shape.by.snap
---
source: crates/ruff_python_formatter/tests/fixtures.rs
input_file: crates/ruff_python_formatter/resources/test/fixtures/ruff/parameter_shape.by
---
## Input
```bython
# basedpython parameter-shape tuples. `*: T` encodes as `Starred(T)` and
# `**: T` as `Starred(Starred(T))`, so an anonymous variadic annotated with the
# bare star (`*: *`) collides with the kwargs catch-all on shape alone — the
# empty `Invalid`-context name of the bare star is what tells them apart

type Variadic = (*: int)
type VariadicAny = (*: *)
type Kwargs = (**: int)
type KwargsAny = (**: *)

# the `ParamSpec` spelling — both halves anonymous and unconstrained
type Any = (*: *, **: *)

# alongside positional entries
type Mixed = (int, str, *: *, **: *)

# named variadic and catch-all
type Named = (*args: int, **kwargs: str)

# a named variadic whose annotation is itself starred — it unpacks a pack
type UnpackedVariadic = (*args: *Ts)

# a bare `*A` splices `A` in rather than annotating each field, so it needs no
# `:`. the lone-element form drops python's disambiguating comma — the star has
# already said this is a tuple
type Pair = (int, str)
type Spliced = (*Pair)
type SplicedWithComma = (*Pair,)
type SplicedAfterPrefix = (bool, *Pair)

# positional-only and keyword-only markers
type Markers = (int, /, str, *, name: bool)


class Callback[Params: (*: *, **: *)]:
    def get(self) -> (**Params) -> None: ...


# the same bound on a function's own type parameters — the form the vendored
# typeshed uses for a python `ParamSpec`
def wrap[Parameters: (*: *, **: *), R](f: (**Parameters) -> R) -> (**Parameters) -> R: ...
```

## Output
```bython
# basedpython parameter-shape tuples. `*: T` encodes as `Starred(T)` and
# `**: T` as `Starred(Starred(T))`, so an anonymous variadic annotated with the
# bare star (`*: *`) collides with the kwargs catch-all on shape alone — the
# empty `Invalid`-context name of the bare star is what tells them apart

type Variadic = (*: int)
type VariadicAny = (*: *)
type Kwargs = (**: int)
type KwargsAny = (**: *)

# the `ParamSpec` spelling — both halves anonymous and unconstrained
type Any = (*: *, **: *)

# alongside positional entries
type Mixed = (int, str, *: *, **: *)

# named variadic and catch-all
type Named = (*args: int, **kwargs: str)

# a named variadic whose annotation is itself starred — it unpacks a pack
type UnpackedVariadic = (*args: *Ts)

# a bare `*A` splices `A` in rather than annotating each field, so it needs no
# `:`. the lone-element form drops python's disambiguating comma — the star has
# already said this is a tuple
type Pair = (int, str)
type Spliced = (*Pair,)
type SplicedWithComma = (*Pair,)
type SplicedAfterPrefix = (bool, *Pair)

# positional-only and keyword-only markers
type Markers = (int, /, str, *, name: bool)


class Callback[Params: (*: *, **: *)]:
    def get(self) -> (**Params) -> None: ...


# the same bound on a function's own type parameters — the form the vendored
# typeshed uses for a python `ParamSpec`
def wrap[Parameters: (*: *, **: *), R](
    f: (**Parameters) -> R,
) -> (**Parameters) -> R: ...
```
