crates/ruff_python_formatter/tests/snapshots/format@properties.by.snap
---
source: crates/ruff_python_formatter/tests/fixtures.rs
input_file: crates/ruff_python_formatter/resources/test/fixtures/ruff/properties.by
---
## Input
```bython
class Person:
    var age: int = 0
        get() = field
        set(value):
            assert value >= 0
            field = value

class Rect:
    var w: int = 0
    let area: int
        get() = self.w * self.w

class Bag:
    let items: list[int]
        field: list[int] = []
        get() = field

class Loader:
    late var handle: str

class Anon:
    let a
        get() = 1

    var b = 0
        get() = field
        set(value):
            field = value
```

## Output
```bython
class Person:
    var age: int = 0
        get() = field
        set(value):
            assert value >= 0
            field = value


class Rect:
    var w: int = 0

    let area: int
        get() = self.w * self.w


class Bag:
    let items: list[int]
        field: list[int] = []
        get() = field


class Loader:
    late var handle: str


class Anon:
    let a
        get() = 1

    var b = 0
        get() = field
        set(value):
            field = value
```
